# motioncore-slowbus

./: .gitignore  CMakeLists.txt  CONTINUE.md  FreeRTOSConfig.h  README.md
app/bus2_test/: main.c
app/bus_api_test/: main.c
app/bus_controller/: boot_identity.c  boot_roster.c  boot_roster.h  cbor_min.h  cfg_file.c  cfg_file.h  main.c  variants.h
app/bus_controller/engine/: VENDORED.md  cfl_embed_stubs.h
app/bus_controller/engine/include/: CT_Tree_Walker.h  avro_common.h  cfl_blackboard.h  cfl_cbor_functions.h  cfl_cbor_node_control.h  cfl_common_function_headers.h  cfl_common_functions.h  cfl_engine.h  cfl_event_queue.h  cfl_exception.h  cfl_exception_support.h  cfl_file_loader.h  cfl_function_loader.h  cfl_global_definitions.h  cfl_heap.h  cfl_heap_arena_allocate.h  cfl_image_loader.h  cfl_json_functions.h  cfl_json_node_control.h  cfl_node_control_support.h  cfl_perm.h  cfl_runtime.h  cfl_se_main_functions.h  cfl_se_module_registry.h  cfl_se_oneshot_functions.h  cfl_se_pred_functions.h  cfl_sm_functions.h  cfl_streaming_support.h  cfl_supervisor_support.h  cfl_timer_system.h  fnv1a.h  json_node_decoder.h
app/bus_controller/engine/src/: CT_Tree_Walker.c  cfl_blackboard.c  cfl_boolean_functions.c  cfl_common_functions.c  cfl_engine.c  cfl_event_queue.c  cfl_exception.c  cfl_heap.c  cfl_heap_arena_allocate.c  cfl_main_functions.c  cfl_node_control_support.c  cfl_one_shot_functions.c  cfl_perm.c  cfl_runtime.c  cfl_sm_functions.c  fnv1a.c  json_node_decoder.c
app/bus_controller/kb0/: kb0.json  kb0.lua  user_functions.c
app/bus_controller/kb0/incr/: chaintree_handle.c  chaintree_handle.h  chaintree_handle_bitmasks.c  chaintree_handle_bitmasks.h  chaintree_handle_blackboard.c  chaintree_handle_blackboard.h  chaintree_handle_events.c  chaintree_handle_events.h  chaintree_handle_functions.c  chaintree_handle_functions.h  chaintree_handle_kb_info.c  chaintree_handle_kb_info.h  chaintree_handle_links.c  chaintree_handle_links.h  chaintree_handle_node_data.c  chaintree_handle_node_data.h  chaintree_handle_nodes.c  chaintree_handle_nodes.h  chaintree_support.c  chaintree_support.h
app/bus_data_test/: main.c
app/chassis/: commission.c  commission.h  main.c
app/phy_test/: main.c
app/samd21_client/: Makefile  README.md  bus_roster.c  bus_roster.h  flash_storage.c  flash_storage.h  main.c  register_dongle_v2.h  register_dongle_v2_module_rom.c  register_dongle_v2_records.h  samd21_adc.h  samd21_commands.c  samd21_hal.c  samd21_hal.h  samd21_hal_pin.c  samd21_hal_pin.h  samd21_interlock_dsl.c  samd21_interlocks.c  samd21_interlocks.h  samd21_pin_table.c  samd21_rs485.c  samd21_rs485.h  samd21_sync.h  sd_spi.c  sd_spi.h  seeeduino_xiao_noinit.ld  shell_commands.c  shell_commands.h  tusb_config.h  usb_descriptors.c  user_functions.c
app/samd21_client/fatfs/: diskio.c  ffconf.h
app/slave/: main.c
app/uplink_test/: main.c
app/vib_node/: main.c
app/wifi_test/: main.c
bench/: bc_benchmark.lua  bench_main.c  bench_user.c
core/: bus_addr.h  bus_crc8.c  bus_crc8.h  bus_frame.c  bus_frame.h  bus_node.c  bus_node.h  bus_phy.h  bus_roster.c  bus_roster.h  bus_sched.c  bus_sched.h  bus_uplink.h  host_link.c  host_link.h
docs/: README.md  bus-arbiter-spec.md  core1-design.md  interlock-port-map.md  io-mode-model.md  io-offload-position.md  pico-wifi-research.md  protocol.md  samd21-config-fs.md  thread3-plan.md  three-thread-design.md  toolchain-arm.md  zenoh-vs-mqtt-position.md
drivers/c/: README.md
drivers/c/i2c/: i2c_bus.h
drivers/c/pcf8563/: pcf8563.c  pcf8563.h
drivers/c/ssd1306/: font5x7.h  ssd1306.c  ssd1306.h
drivers/c/test/: test_c_drivers.c
drivers/lua/: README.md
drivers/lua/demo/: demo.lua
drivers/lua/i2c/: i2c_host.lua
drivers/lua/pcf8563/: pcf8563.lua
drivers/lua/ssd1306/: font5x7.lua  ssd1306.lua
host/zenoh_agent/: Dockerfile  agent.lua  commission.sh  zcli.lua  zstress.lua
node/: boot_hwio.c  boot_hwio.h  boot_identity.c  boot_identity.h  boot_netcfg.c  boot_netcfg.h  cbor_min.h  node_role.c  node_role.h  variants.h
node/interlock/: il_hal.h  il_hal_rp2040.c  il_pin_table.c  il_pin_table.h  interlock.c  interlock.h  interlock_dsl.c  samd21_pin_table_ref.h
port/rp2040/: board.c  board.h  cfl_timer_rp2040.c  lwipopts.h  phy_pio_rs485.c  quadrature_encoder.pio  rs485.pio  servo_bank.pio  uplink_none.c  uplink_usb_cdc.c  uplink_wifi_proxy.c
port/rp2350/: adc_capture.c  adc_capture.h  board.h
port/rp2350/dsp/: fir_coeffs.h  gen_fir.lua  pipeline.c  pipeline.h  spectral.c  spectral.h
tools/: Makefile  cbor_selftest.c  deploy.sh  frame_selftest.c  gen_kb.sh  host_link_selftest.c  install-arm-toolchain.sh  pi-build.sh  pi-env.sh  uf2conv.lua
tools/commission/: README.md  bench.py  commission.py  config_tree.py  dsl_parity.py  libcomm.py  namespace_db.py  ns_commission.py  requirements.txt  slave_dsl.py
tools/commission/examples/: adc_monitor.py  gpio_panel.py
tools/commission/firmware/: register_dongle.uf2
tools/commission/lua/: bench.lua  cbor.lua  cfg_image.lua  commission.lua  config_tree.lua  configs_two_pico.lua  dsl_compile.lua  flash.lua  fleet.lua  gwlog.lua  libcomm.lua  libcomm_selftest.lua  link.lua  namespace_db.lua  ns_selftest.lua  pico.lua  pico_app_echo.lua  pico_app_il_clear.lua  pico_bus.lua  pico_regress.lua  pico_roster.lua  pico_slave.lua  pico_wifi_agent.lua  picolink.lua  read_slvr.lua  setup_bench_ns.lua  slave_dsl.lua  sqlite3_helpers.lua
tools/commission/tests/: README.md
tools/commission/tests/adc/: README.md  adc_harness.py  run_adc_tests.py  test_adc_interlock.py  test_adc_oc.py  test_adc_selftest.py  test_adc_twotone.py
tools/commission/tests/counter/: README.md  counter_harness.py  run_counter_tests.py  test_counter.py  test_counter_bench.py
tools/commission/tests/gpio/: README.md  gpio_harness.py  run_gpio_tests.py  test_gpio_interlock.py  test_gpio_outputs.py  test_gpio_pinmap.py  test_gpio_wired_or.py
tools/commission/tests/mixed/: README.md  mixed_harness.py  run_mixed_tests.py  test_mixed_interlock.py  test_mixed_oc.py  test_mixed_trip.py
(+3 files in other folders)
